@@ -1,5 +1,7 @@
 2012-12-30  Russ Allbery  <rra@stanford.edu>
 
+	* t/synopsis.t: New test for SYNOPSIS syntax.
+
 	* ANSIColor.pm: Add COMPATIBILITY section to the documentation,
 	collecting all information about when features were introduced and
 	adding the version of Perl that they shipped with.  Add
